# claude-code-starter-kit

./: .gitignore  README.md
python-dev/: .gitignore  CLAUDE.md  README.md  pyproject.toml  semantic-release.toml
python-dev/.claude/: settings.json  settings.toml
python-dev/.claude/agents/: package-manager.md  python-expert.md  test-runner.md
python-dev/.claude/commands/: py-build.md  py-clean.md  py-deps.md  py-format.md  py-lint.md  py-release.md  py-test.md
python-dev/examples/: semantic-release.toml
python-dev/scripts/: check_code.sh  update_docs.sh
python-dev/src/: example.py
python-dev/tests/: test_example.py
research-assistant/: CLAUDE.md  README.md  convert.bat  convert.sh
research-assistant/.claude/agents/: competitive-analyst.md  data-researcher.md  korean-legal-expert.md  market-researcher.md  research-analyst.md  search-specialist.md  trend-analyst.md
research-assistant/.claude/commands/: deep-research.md  deep-research.sh  export-docx.sh  export-excel.sh  export-pdf.sh
research-assistant/examples/: advanced-features-test.md  sample-research.md
research-assistant/scripts/: convert.py
research-assistant/styles/: professional.css
research-assistant/templates/: legal.html  presentation.html  report.html
